[gd_scene load_steps=4 format=3 uid="uid://c5lgjyapcn1nn"]

[ext_resource type="Script" path="res://LP4-1.gd" id="1_ejbmq"]
[ext_resource type="LabelSettings" uid="uid://bvw7bu4yt4yb3" path="res://big_label.tres" id="2_jiuf7"]
[ext_resource type="Theme" uid="uid://b1of66lsewm4f" path="res://big_text.tres" id="3_t6epn"]

[node name="LP4-1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ejbmq")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 62.0
offset_top = 42.0
offset_right = 472.0
offset_bottom = 115.0
text = "Enter # of copies to print:"
label_settings = ExtResource("2_jiuf7")

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_left = 38.0
offset_top = 170.0
offset_right = 1123.0
offset_bottom = 463.0
label_settings = ExtResource("2_jiuf7")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 464.0
offset_top = 34.0
offset_right = 884.0
offset_bottom = 112.0
theme = ExtResource("3_t6epn")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 491.0
offset_right = 334.0
offset_bottom = 646.0
theme = ExtResource("3_t6epn")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 406.0
offset_top = 493.0
offset_right = 734.0
offset_bottom = 648.0
theme = ExtResource("3_t6epn")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 818.0
offset_top = 490.0
offset_right = 1146.0
offset_bottom = 645.0
theme = ExtResource("3_t6epn")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
